--- a/minin cart/index.html
+++ b/minin cart/index.html
@@ -84,6 +84,7 @@
             <table id="list" class="table">
                 <thead>
                     <tr>
+                        <td>Id</td>
                         <td>product</td>
                         <td>Name</td>
                         <td>Quantity</td>
@@ -91,7 +92,7 @@
                         <td>Total</td>
                     </tr>
                 </thead>
-                <tbody id="cartItem">
+                <tbody id="cartItem" class="table">
 
                 </tbody>
             </table>
