--- a/minin cart/index.html
+++ b/minin cart/index.html
@@ -95,7 +95,7 @@
 
                 </tbody>
             </table>
-            <button id="clear-cart" onclick="ClearAll()">Clear cart</button>
+            <button class="btn btn-primary" id="clear-cart" onclick="ClearAll()">Clear cart</button>
             <div id="overall-price">
             </div>
         </div>
